Allow anyone to get the list of plant types.
